--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,6 @@
   "useTabs": false,
   "semi": false,
   "singleQuote": true,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "trailingComma": "es5"
 }
