--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "tree-sitter-typescript": "^0.23.2",
+    "use-debounce": "^10.0.4",
     "zod": "^3.24.4"
   },
   "devDependencies": {
