--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4.1.8",
+    "@tanstack/react-query": "^5.80.6",
     "@types/recharts": "^2.0.1",
     "@types/three": "^0.176.0",
     "@vercel/analytics": "^1.5.0",
